fix: overflows

--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -46,7 +46,7 @@
 }
 
 .q-form{
-    width: 60%;
+    width: 70%;
     margin: auto;
 }
 
@@ -85,7 +85,7 @@
 
 .query{
     width: 100%;
-    margin-bottom: 5rem;
+    padding-bottom: 5rem;
 }
 
 .q-form-submit{
